# barra

./: .editorconfig  .gitattributes  .gitignore  12-handoff-system-prompt.md  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  RESUMIDO.md  apresentacao_elite_baby.html  ata2.md  barravips-ata-de-reuniao-09.04.2026.md  bash.exe.stackdump  contexto.txt  conversas_chave_vendedor.html  logs.txt  painel_metricas_elite_baby.html  prova_agente_vs_vendedor.html  relatorio-prontidao-agente.html  roadmap-prontidao-agente.html  roadmap-prontidao-agente.md  skills-lock.json  system_prompt_agente.md  tasks.txt
api/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  blocks.txt  package.json  pyproject.toml
api/evals/: README.md  __init__.py  checks.py  conduta.py  estilometria.py  harness.py  harness_fiel.py  relatorio.py  sequencia.py  teste_v4flash_cenario1.py
api/scripts/: langfuse_smoke.py
api/tests/: conftest.py  test_agenda_bloqueio_guard.py  test_agenda_integration.py  test_alertas_relay.py  test_atendimentos.py  test_atendimentos_excluir.py  test_atendimentos_filtro_periodo.py  test_atendimentos_geo.py  test_atendimentos_midias.py  test_atendimentos_pausar.py  test_atendimentos_resumo.py  test_atendimentos_schemas.py  test_atendimentos_sinais_derivados.py  test_atendimentos_tipos_local.py  test_atendimentos_transicao_painel.py  test_auth_errors.py  test_baixo_score.py  test_belief_state.py  test_calibracao_rotulagem.py  test_clientes_crud.py  test_clientes_integration.py  test_clientes_mapa.py  test_clientes_mapa_perfis.py  test_clientes_resumo.py  test_coalesce_varredura.py  test_comprovante_fechamento_grupo.py  test_conversas_metricas.py  test_cors_guard_producao.py  test_custo_01_comissao_taxa.py  test_dashboard.py  (+62 more)
(+1143 files in other folders)
