[project]
name = "barra"
version = "0.1.0"
description = "Central Inteligente de Atendimento — Elite Baby"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "psycopg[binary,pool]>=3.2",
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=2.0",
    "anthropic>=0.42",
    "arq>=0.26",
    "httpx>=0.28",
    "minio>=7.2",
    "python-multipart>=0.0.18",
    "PyJWT[crypto]>=2.10",
    "prometheus-client>=0.21",
    "sentry-sdk[fastapi]>=2.19",
    "structlog>=24.4",
    "supabase>=2.10",
    "langchain-anthropic>=1.4.3",
    "jinja2>=3.1.6",
    "openai>=1.50",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.21",
    "fakeredis[lua]>=2.35.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/barra"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = [
    "B008",  # FastAPI Depends em defaults e padrao aceito pelo framework
    "E501",  # SQL multiline e tipos longos ficam mais legiveis sem quebra artificial
    "RUF005",
    "S101",  # assert ok em testes
    "S608",  # SQL parametrizado com clausulas controladas
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
